# Apple-MCPs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: protocol-ci.yml
Apple-AIO-MCP/: README.md  manifest.json  pyproject.toml
Apple-AIO-MCP/src/apple_agent_mcp/: bootstrap.py  config.py  models.py  tools.py
Apple-AIO-MCP/tests/: test_tools.py
Apple-Calendar-MCP/: README.md  manifest.json  pyproject.toml  server.py
Apple-Calendar-MCP/tests/: test_calendar_bridge.py  test_config.py  test_permissions.py  test_tools.py
Apple-Tools-MCP/: README.md  manifest.dxt.json  manifest.json  pyproject.toml  server.py
Apple-Tools-MCP/src/apple_agent_mcp/: bootstrap.py  config.py  conformance.py  models.py  permissions.py  state.py  tools.py
Apple-Tools-MCP/tests/: test_bootstrap.py  test_tools.py
AppleContacts-MCP/: README.md  manifest.json  pyproject.toml  requirements.txt  server.py
AppleContacts-MCP/applescripts/: delete_contact.applescript  get_contact.applescript  list_contacts.applescript  search_contacts.applescript
AppleContacts-MCP/tests/: test_bridge.py  test_config.py  test_permissions.py  test_tools.py
AppleFiles-MCP/: README.md  manifest.json  pyproject.toml  requirements.txt  server.py
AppleFiles-MCP/tests/: test_files_bridge.py  test_tools.py
AppleMCPCommon/: README.md  pyproject.toml
AppleMCPCommon/tests/: test_discovery.py
AppleMail-MCP/: .env.example  README.md  manifest.json  pyproject.toml  requirements.txt  server.py
AppleMail-MCP/applescripts/: compose_draft.applescript  get_message.applescript  search_messages.applescript  send_message.applescript
AppleMail-MCP/tests/: test_config.py  test_mail_bridge.py  test_permissions.py  test_tools.py
AppleMaps-MCP/: README.md  manifest.json  pyproject.toml  server.py  start.sh
AppleMaps-MCP/src/apple_maps_mcp/: __init__.py  apple_maps_bridge.swift  config.py  maps_bridge.py  models.py  tools.py
AppleMaps-MCP/tests/: test_bridge.py  test_config.py  test_tools.py
AppleMessages-MCP/: README.md  manifest.json  pyproject.toml  server.py
AppleMessages-MCP/src/apple_messages_mcp/: config.py  messages_automation_bridge.py  messages_db_bridge.py  models.py  permissions.py  tools.py
AppleMessages-MCP/tests/: test_db_bridge.py  test_permissions.py  test_tools.py
AppleNotes-MCP/: README.md  manifest.json  pyproject.toml  server.py
AppleNotes-MCP/applescripts/: create_folder.applescript  create_note.applescript  delete_note.applescript  get_note.applescript  list_folders.applescript  list_notes.applescript  rename_folder.applescript  update_note.applescript
AppleNotes-MCP/tests/: test_bridge.py  test_config.py  test_permissions.py  test_tools.py
AppleReminders-MCP/: README.md  manifest.json  pyproject.toml  server.py  start.sh
AppleReminders-MCP/tests/: test_bridge.py  (+3 more)
AppleShortcuts-MCP/: README.md  manifest.json  pyproject.toml  server.py
AppleSystem-MCP/: README.md  manifest.json  pyproject.toml  server.py
ICal-MCP/: .env.example  README.md  manifest.json  pyproject.toml
ICal-MCP/src/apple_calendar_mcp/: cache.py  config.py  models.py  tools.py
ICal-MCP/tests/: test_calendar_bridge.py  test_tools.py
SharedAppleBridge/: apple_maps_bridge.swift  apple_pim_bridge.swift
docs/: code-mode.md
scripts/: generate_tool_search_artifacts.py  inspector_smoke.sh  install_all.sh
(+83 files in other folders)
