[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apple-aio-mcp"
version = "0.1.0"
description = "Unified Apple ecosystem MCP server for macOS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.26.0,<2",
  "pydantic>=2.12.0",
]

[project.scripts]
apple-aio-mcp = "apple_agent_mcp.tools:main"

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "ruff>=0.11,<1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
